crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__where_before_pass.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: single_pass_with_where
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: x
- Colon
- Ident: T
- RParen
- Arrow
- Ident: T
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Clone
- Newline
- Dedent
- Pass
- Newline
- Dedent
