crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__zero_literals.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Let
- Ident: iz
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Let
- Ident: fz
- Eq
- FloatLiteral:
    digits: "0.0"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: one
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Let
- Ident: neg_in_expr
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Let
- Ident: fone
- Eq
- FloatLiteral:
    digits: "1.0"
    exponent: ~
    suffix: ~
- Newline
