crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__zero_params.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: no_params
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: no_params_no_return
- LParen
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
